# CoordinatesMath

./: CMakeLists.txt  crsPose.cpp  crsPose.h  cvUtils.cpp  cvUtils.h  main.cpp  rotation.cpp  rotation.h
